[gd_scene load_steps=6 format=3 uid="uid://8hpee6onesmn"]

[ext_resource type="Script" uid="uid://okppoovdq00j" path="res://tests/test_menus.gd" id="1_sg8i6"]
[ext_resource type="PackedScene" uid="uid://ycyfqmiw4s6t" path="res://ui/menu/main_menu.tscn" id="1_u7nr5"]
[ext_resource type="PackedScene" uid="uid://dqyego2hge5s3" path="res://ui/menu/credit_menu.tscn" id="2_sg8i6"]
[ext_resource type="PackedScene" uid="uid://djths2blh8y0a" path="res://ui/menu/pause_menu.tscn" id="3_qnsgx"]
[ext_resource type="PackedScene" uid="uid://b8h5ahh202q6k" path="res://ui/menu/achievement_menu.tscn" id="5_qnsgx"]

[node name="TestMenus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sg8i6")

[node name="PauseMenu" parent="." instance=ExtResource("3_qnsgx")]
layout_mode = 1

[node name="MainMenu" parent="." instance=ExtResource("1_u7nr5")]
layout_mode = 1

[node name="CreditMenu" parent="." instance=ExtResource("2_sg8i6")]
layout_mode = 1

[node name="AchievementMenu" parent="." instance=ExtResource("5_qnsgx")]
layout_mode = 1
